<resources>
    <string name="app_name">Energization</string>
    <string name="imageView">image</string>
    <string name="playMusic">play</string>
    <string name="nextButton">image</string>
    <string name="previousButton">image</string>
    <string name="stepID">0</string>

    <string name="hello_world">Android Material Design App Bar/ActionBar</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="noneAudio">None</string>
    <string name="briefAudio">Brief</string>
    <string name="detailedAudio">Detailed</string>
    <string name="feedbackButton">Send Feedback</string>
    <string name="action_info">action_info</string>
    <string name="step">step</string>

    <string-array name="steps_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
    </string-array>
</resources>
