<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Audio Instruction"
        android:id="@+id/audioLength"
        android:textSize="25sp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10sp"
        android:layout_marginStart="10sp" />
    <LinearLayout
        android:id="@+id/radioStuff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/audioLength">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noneAudio"
            android:id="@+id/noneAudio"
            android:checked="false"
            android:layout_below="@+id/audioLength"
            android:layout_alignLeft="@+id/audioLength"
            android:layout_alignStart="@+id/audioLength" />

            <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/briefAudio"
            android:id="@+id/briefAudio"
            android:checked="true"
            android:layout_below="@+id/noneAudio"
            android:layout_alignLeft="@+id/noneAudio"
            android:layout_alignStart="@+id/noneAudio" />

            <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailedAudio"
        android:id="@+id/detailedAudio"
        android:checked="false"
        android:layout_below="@+id/radioButton"
        android:layout_alignLeft="@+id/radioButton"
        android:layout_alignStart="@+id/radioButton" />

        </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="We appreciate your feedback!"
        android:id="@+id/textView"
        android:textSize="25sp"
        android:layout_below="@+id/radioStuff"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10sp"
        android:layout_marginStart="10sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedbackButton"
        android:id="@+id/feedbackButton"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />/>

</RelativeLayout>